<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactDetailViewModel"
            type="com.farissyariati.gojektest.viewmodel.ContactDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_image_holder"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/image_profil_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:imageUrl="@{contactDetailViewModel.profileImage}" />
            <TextView
                android:id="@+id/text_user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                android:text="@{contactDetailViewModel.fullName}"
                tools:text="@string/default_user_full_name"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"/>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="5sp"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/image_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="30sp"
                        android:textColor="@color/materialLightBlue"
                        app:typeface="@{contactDetailViewModel.context}"
                        android:text="@string/material_phone" />

                    <RelativeLayout
                        android:id="@+id/layout_phone_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_toEndOf="@id/image_phone">
                        <TextView
                            android:id="@+id/text_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/blackTransparent87"
                            android:text="@{contactDetailViewModel.phoneNumber}"
                            tools:text="@string/default_user_phone_number"/>
                        <TextView
                            android:id="@+id/text_phone_number_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_marginTop="4dp"
                            android:layout_below="@id/text_phone_number"
                            android:textColor="@color/blackTransparent54"
                            android:text="@string/default_phone_type"/>

                        <ImageView
                            android:id="@+id/image_message"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@mipmap/ic_sms"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/viewLineSeparator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/layout_phone_container"
                        android:background="@android:color/darker_gray"
                        android:layout_alignStart="@+id/layout_phone_container" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/image_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="35sp"
                        android:textColor="@color/materialLightBlue"
                        app:typeface="@{contactDetailViewModel.context}"
                        android:text="@string/material_email"/>

                    <RelativeLayout
                        android:id="@+id/layout_mail_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_toEndOf="@id/image_mail">
                        <TextView
                            android:id="@+id/text_mail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/blackTransparent87"
                            android:text="@{contactDetailViewModel.emailAddress}"
                            tools:text="@string/default_user_mail"/>
                        <TextView
                            android:id="@+id/text_mail_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_marginTop="4dp"
                            android:layout_below="@id/text_mail"
                            android:textColor="@color/blackTransparent54"
                            android:text="@string/default_mail_type"/>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</layout>